--- a/index.html
+++ b/index.html
@@ -2,31 +2,54 @@
 <head>
 <style>
   .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
+    margin: 20px;
   }
 
-  .link {
-    width: 200px;
-    height: 200px;
-    margin: 10px;
+  .square {
+    border-radius: 15px;
+    width: 100px;
+    height: 100px;
     border: 1px solid black;
     text-align: center;
-    line-height: 200px;
+    line-height: 100px;
     font-size: 20px;
+    color: white;
+  }
+
+  .pink {
+    background-color: pink;
+  }
+
+  .blue {
+    background-color: lightblue;
+  }
+
+  .green {
+    background-color: lightgreen;
+  }
+
+  .yellow {
+    background-color: pink;
   }
 </style>
 </head>
 <body>
 <div class="container">
-  <a class="link" href="^1^">Bing</a>
-  <a class="link" href="^2^">Google</a>
-  <a class="link" href="^3^">YouTube</a>
-  <a class="link" href="^4^">Facebook</a>
-  <a class="link" href="^5^">Twitter</a>
-  <a class="link" href="^6^">Instagram</a>
+  <a href="https://www.bing.com" class="square pink">Bing</a>
+  <a href="https://www.google.com" class="square blue">Google</a>
+  <a href="https://www.github.com" class="square green">GitHub</a>
+  <a href="https://www.dropbox.com" class="square yellow">Dropbox</a>
+  <a href="https://www.facebook.com" class="square pink">Facebook</a>
+  <a href="https://www.twitter.com" class="square blue">Twitter</a>
+  <a href="https://www.instagram.com" class="square green">Instagram</a>
+  <a href="https://www.youtube.com" class="square yellow">YouTube</a>
+  <a href="https://www.amazon.com" class="square pink">Amazon</a>
+  <a href="https://www.flipkart.com" class="square blue">Flipkart</a>
+  <a href="https://www.netflix.com" class="square green">Netflix</a>
+  <a href="https://www.primevideo.com" class="square yellow">Prime Video</a>
 </div>
 </body>
 </html>
