--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 <style>
   .container {
     display: grid;
@@ -11,8 +11,8 @@
 
   .square {
     border-radius: 15px;
-    width: 100px;
-    height: 100px;
+    width: 500px;
+    height: 500px;
     border: 1px solid black;
     text-align: center;
     line-height: 100px;
