--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 50px;
     margin: 50px;
+    margin-right: 50px;
   }
 
   .square {
@@ -16,7 +17,7 @@
     border: 1px solid black;
     text-align: center;
     line-height: 100px;
-    font-size: 20px;
+    font-size: 30px;
     color: white;
   }
 
