--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@
 </head>
 <body>
 <div class="container">
-  <a href="https://www.bing.com" class="square pink">Bing</a>
-  <a href="https://www.google.com" class="square blue">Google</a>
-  <a href="https://www.github.com" class="square green">GitHub</a>
-  <a href="https://www.dropbox.com" class="square yellow">Dropbox</a>
-  <a href="https://www.facebook.com" class="square pink">Facebook</a>
-  <a href="https://www.twitter.com" class="square blue">Twitter</a>
-  <a href="https://www.instagram.com" class="square green">Instagram</a>
-  <a href="https://www.youtube.com" class="square yellow">YouTube</a>
-  <a href="https://www.amazon.com" class="square pink">Amazon</a>
-  <a href="https://www.flipkart.com" class="square blue">Flipkart</a>
-  <a href="https://www.netflix.com" class="square green">Netflix</a>
-  <a href="https://www.primevideo.com" class="square yellow">Prime Video</a>
+  <a href="https://www.greaterkashmir.com" class="square pink">G K</a>
+  <a href="https://www.gsmarena.com" class="square blue">GSMArena</a>
+  <a href="https://seedr.cc" class="square green">seedr</a>
+  <a href="https://psa.wf" class="square yellow">PSA</a>
+  <a href="https://nytimes.com/games/wordle/index.html" class="square pink">Wordle</a>
+  <a href="https://phrazle.gg" class="square blue">Phrazle</a>
+  <a href="#" class="square green">A</a>
+  <a href="" class="square yellow">B</a>
+  <a href="#" class="square pink">C</a>
+  <a href="#" class="square blue">D</a>
+  <a href="#" class="square green">E</a>
+  <a href="#" class="square yellow">F</a>
 </div>
 </body>
 </html>
