--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
+
 <style>
   .container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    width: 1000px;
     grid-gap: 50px;
     margin-top:501px; 
     
