--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
   <a href="https://psa.wf" class="square yellow">PSA</a>
   <a href="https://nytimes.com/games/wordle/index.html" class="square pink">Wordle</a>
   <a href="https://phrazle.gg" class="square blue">Phrazle</a>
-  <a href="https://cricbuzz.com" class="square blue">Cricbuzz</a>
-  <a href="cricbuzz.com" class="square green">Cricbuzz</a>
+  <a href="https://cricbuzz.com" class="square green">Cricbuzz</a>
   <a href="" class="square yellow">B</a>
   <a href="#" class="square pink">C</a>
   <a href="#" class="square blue">D</a>
